# STIM_Project

./: .gitignore  API Token.txt  CONTRIBUTORS.md  LICENSE  LICENSE.txt  README.md  example.txt  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
STIM_Module/: API_KEY.py  STIM_main.py  __init__.py  api_funcs.py  application.py  data_processing.py  dummy_matplot.py  game.py  game_timeline.py  gui_test.py  pandas_matplot_testing.py  summoner.py  test.csv  test_main.py  user.py
STIM_Module/classes/: game.py  summoner.py
src/STIM_Module/: API_KEY.py  __init__.py  __main__.py  analysis.py  api_funcs.py  application.py  arghooktest.py  data_processing.py  dummy_matplot.py  font.py  game.py  matplot_test.py  new_exceptions.py  paramPassback.py  summoner.py  test2.py  test_main.py  user.py
