[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "STIM_Module"
version = "0.0.3"
authors = [
  { name="Jaxton Willman", email="jaxtonwillman@gmail.com" },
]
description = "League of Legends STIM Module"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[project.urls]
"Homepage" = "https://jaxjaxw.github.io/STIM_Module/index.html"
"Issues" = "https://github.com/ben-covert2020/STIM_Module/issues"
"Documentation" = "https://jaxjaxw.github.io/STIM_Module/documentation/index.html"
"Source Code" = "https://github.com/ben-covert2020/STIM_Module"
"Funding" = "https://www.patreon.com/jaxjaxw"

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default
include = ["STIM_Module*"]  # ["*"] by default
exclude = ["STIM_Module.tests*"]  # empty by default
namespaces = false  # true by default

[project.scripts]
LOLstats = "STIM_Module.application:main"
hello-world = "STIM_Module:hello_world"
hello-homeD = "STIM_Module:hello_homeD"

[project.gui-scripts]
start = "STIM_Module.application:main"